Update Chicken.java